--- a/achievements.html
+++ b/achievements.html
@@ -122,7 +122,7 @@
               <img src="${course.image}" alt="${course.title}">
               <div class="course-content">
                 <h4>
-                  <a href="course.html?id=${course.id}" style="text-decoration:none;color:#1c3faa;">
+                  <a href="course-detail.html?id=${course.id}" style="text-decoration:none;color:#1c3faa;">
                     ${course.title}
                   </a>
                 </h4>
