--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <
 </head>
-script type="module" src="js/main.js" defer></script>
+< script type="module" src="js/main.js" defer>
 <body>
   <div id="header-placeholder"></div>
 
@@ -100,5 +100,6 @@ script type="module" src="js/main.js" defer></script>
   </section>
 
   <div id="footer-placeholder"></div>
+  
 </body>
 </html>
