--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     loadLatestCourses();
   </script>
 
-  <
+  < script type="module" src="js/main.js" defer>
 </head>
 < script type="module" src="js/main.js" defer>
 <body>
