--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
     loadLatestCourses();
   </script>
 
-  < script type="module" src="js/main.js" defer>
+  <script type="module" src="js/main.js" defer></script>
 </head>
-< script type="module" src="js/main.js" defer>
 <body>
   <div id="header-placeholder"></div>
 
