Add results, verification, paths, and reviews

--- a/achievements.html
+++ b/achievements.html
@@ -104,7 +104,11 @@
               <a href="${cert.certificateUrl}" download class="download-btn">تحميل</a>
               <h4>${cert.title}</h4>
               <span>تاريخ الإصدار: ${cert.issuedAt}</span>
-              <button onclick="window.open('${cert.certificateUrl}', '_blank')">عرض الشهادة</button>
+              ${cert.verificationCode ? `<span class="certificate-code">رمز التحقق: ${cert.verificationCode}</span>` : ""}
+              <div class="certificate-actions">
+                <button onclick="window.open('${cert.certificateUrl}', '_blank')">عرض الشهادة</button>
+                ${cert.verificationCode ? `<a href="/verify-certificate.html?code=${cert.verificationCode}" class="verify-btn">تحقق من الشهادة</a>` : ""}
+              </div>
             </div>
           `;
         });
@@ -122,7 +126,7 @@
               <img src="${course.image}" alt="${course.title}">
               <div class="course-content">
                 <h4>
-                  <a href="course.html?id=${course.id}" style="text-decoration:none;color:#1c3faa;">
+                  <a href="course-detail.html?id=${course.id}" style="text-decoration:none;color:#1c3faa;">
                     ${course.title}
                   </a>
                 </h4>
