--- a/certificates.html
+++ b/certificates.html
@@ -18,34 +18,14 @@
 <!-- Header سيتم تحميله تلقائياً عبر main.js -->
 <div id="header-placeholder"></div>
 
-<section>
+<section class="container">
   <h2>الشهادات الخاصة بك</h2>
-  <div class="courses-grid">
-    <div class="card">
-      <img src="/public/assets/images/certificate.jpg" alt="Certificate">
-      <div class="card-content">
-        <h3>شهادة تطوير الويب</h3>
-        <p>تم إكمال الدورة بنجاح.</p>
-        <a href="/public/assets/images/certificate.jpg" class="btn" download>تحميل الشهادة</a>
-      </div>
-    </div>
-    <div class="card">
-      <img src="/public/assets/images/certificate.jpg" alt="Certificate">
-      <div class="card-content">
-        <h3>شهادة الذكاء الاصطناعي</h3>
-        <p>تم إكمال الدورة بنجاح.</p>
-        <a href="/public/assets/images/certificate.jpg" class="btn" download>تحميل الشهادة</a>
-      </div>
-    </div>
-  </div>
+  <p>تم نقل الشهادات إلى صفحة الإنجازات حتى تتمكن من عرضها وتنزيلها بسهولة.</p>
+  <a href="/achievements.html" class="btn">الانتقال إلى إنجازاتي</a>
 </section>
 
 <link rel="stylesheet" href="css/footer.css">
 <div id="footer-placeholder"></div>
-
-<script>
-
-
 
 </body>
 </html>
