--- a/courses.html
+++ b/courses.html
@@ -84,6 +84,7 @@
 
     function renderCourses(courses) {
       coursesGrid.innerHTML = "";
+      const lang = localStorage.getItem("coursehub_lang") || "ar";
 
       if (!courses || courses.length === 0) {
         coursesGrid.innerHTML = "<div class='empty-msg'>لا توجد دورات حالياً.</div>";
@@ -91,16 +92,18 @@
       }
 
       courses.forEach((course) => {
+        const titleText = lang === "en" ? course.titleEn || course.title : course.title;
+        const descriptionText = lang === "en" ? course.descriptionEn || course.description : course.description;
         const card = document.createElement("div");
         card.className = "card";
         card.dataset.category = course.category || "all";
 
         card.innerHTML = `
-          <img src="${course.image || "assets/images/default-course.png"}" alt="${course.title}">
+          <img src="${course.image || "assets/images/default-course.png"}" alt="${titleText}">
           <div class="card-content">
-            <h3 onclick="window.location.href='course-detail.html?id=${course.id}'">${course.title}</h3>
+            <h3 onclick="window.location.href='course-detail.html?id=${course.id}'">${titleText}</h3>
             <div class="rating">${"★".repeat(course.rating || 4)} <span>(${course.students || 0} طالب)</span></div>
-            <p>${course.description || ""}</p>
+            <p>${descriptionText || ""}</p>
             <a href="course-detail.html?id=${course.id}" class="btn">عرض الدورة</a>
           </div>
         `;
