--- a/admin/users.html
+++ b/admin/users.html
@@ -74,7 +74,7 @@
               <th>الاسم</th>
               <th>البريد الإلكتروني</th>
               <th>الدور</th>
-              <th>الإجراءات</th>
+              <th>الحالة</th>
             </tr>
           </thead>
           <tbody id="users-list">
