--- a/admin/courses-admin.html
+++ b/admin/courses-admin.html
@@ -69,9 +69,7 @@
               <th>عنوان الدورة</th>
               <th>الوصف</th>
               <th>الحالة</th>
-              <th>بدأوا</th>
-              <th>أكملوا</th>
-              <th>غير مكتمل</th>
+              <th>عدد الطلاب</th>
               <th>الإجراءات</th>
             </tr>
           </thead>
