--- a/admin/partials-admin/sidebar.html
+++ b/admin/partials-admin/sidebar.html
@@ -5,13 +5,48 @@
   </div>
 
   <ul class="sidebar-menu">
-    <li><a href="dashboard.html" class="active">🏠 لوحة التحكم</a></li>
-    <li><a href="analytics.html">📈 التحليلات</a></li>
-    <li><a href="users.html">👤 المستخدمون</a></li>
-    <li><a href="courses-admin.html">📚 الدورات</a></li>
-    <li><a href="certificates-admin.html">🏆 الشهادات</a></li>
-    <li><a href="tests-admin.html">🧪 الاختبارات</a></li>
-    <li><a href="settings-admin.html">⚙️ الإعدادات</a></li>
+    <li>
+      <a href="dashboard.html">
+        <span class="menu-icon">🏠</span>
+        <span class="menu-text">لوحة التحكم</span>
+      </a>
+    </li>
+    <li>
+      <a href="analytics.html">
+        <span class="menu-icon">📈</span>
+        <span class="menu-text">التحليلات</span>
+      </a>
+    </li>
+    <li>
+      <a href="users.html">
+        <span class="menu-icon">👤</span>
+        <span class="menu-text">المستخدمون</span>
+      </a>
+    </li>
+    <li>
+      <a href="courses-admin.html">
+        <span class="menu-icon">📚</span>
+        <span class="menu-text">الدورات</span>
+      </a>
+    </li>
+    <li>
+      <a href="certificates-admin.html">
+        <span class="menu-icon">🏆</span>
+        <span class="menu-text">الشهادات</span>
+      </a>
+    </li>
+    <li>
+      <a href="tests-admin.html">
+        <span class="menu-icon">🧪</span>
+        <span class="menu-text">الاختبارات</span>
+      </a>
+    </li>
+    <li>
+      <a href="settings-admin.html">
+        <span class="menu-icon">⚙️</span>
+        <span class="menu-text">الإعدادات</span>
+      </a>
+    </li>
   </ul>
 
   <div class="sidebar-footer">
