--- a/settings.html
+++ b/settings.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/settings.css">
 </head>
 <body>
   <div id="header-placeholder"></div>
 
-  <main>
-    <h2>الإعدادات</h2>
+  <main class="settings-page">
     <div id="settings-content"></div>
   </main>
 
@@ -20,5 +20,6 @@
 
   <script src="js/main.js"></script>
   <script src="js/auth-guard.js"></script>
+  <script type="module" src="js/settings.js"></script>
 </body>
 </html>
