--- a/profile.html
+++ b/profile.html
@@ -12,93 +12,8 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/profile.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f4f6f9;
-      margin: 0;
-      padding: 0;
-      color: #333;
-    }
-
-    /* Profile Card */
-    .profile-card {
-      max-width: 500px;
-      margin: 80px auto;
-      background: white;
-      border-radius: 15px;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
-      text-align: center;
-      padding: 40px 30px;
-    }
-
-    .profile-card img.profile-pic {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      border: 4px solid #1c3faa;
-      object-fit: cover;
-      margin-bottom: 20px;
-      cursor: pointer;
-    }
-
-    .profile-card h2 {
-      font-size: 26px;
-      margin-bottom: 5px;
-      color: #1c3faa;
-    }
-
-    .profile-card p.email {
-      font-size: 16px;
-      color: #555;
-      margin-bottom: 25px;
-    }
-
-    .profile-card form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
-    .profile-card input {
-      padding: 12px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
-    .profile-card input[disabled] {
-      background-color: #eee;
-      cursor: not-allowed;
-    }
-
-    .btn-save {
-      background-color: #ffcc00;
-      color: #1c3faa;
-      font-weight: 700;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    .btn-logout {
-      background-color: #1c3faa;
-      color: white;
-      font-weight: 700;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    @media(max-width:600px){
-      .profile-card { margin: 40px 20px; padding: 30px 20px; }
-      .profile-card img.profile-pic { width: 100px; height: 100px; }
-    }
-  </style>
 </head>
 
 <body>
@@ -106,70 +21,64 @@
   <!-- Header -->
   <div id="header-placeholder"></div>
 
-  <!-- Profile Card -->
-  <div class="profile-card">
-    <img src="" alt="Profile Picture" class="profile-pic" id="profilePic">
-    <h2 id="profileName"></h2>
-    <p class="email" id="profileEmail"></p>
+  <main class="profile-page">
+    <section class="profile-hero">
+      <div class="profile-hero-info">
+        <span class="profile-badge">حسابي</span>
+        <h1>إدارة ملفك الشخصي بسهولة</h1>
+        <p>تابع إنجازاتك وتقدمك، وحدّث بياناتك من خلال صفحة الإعدادات.</p>
+      </div>
+      <div class="profile-hero-card">
+        <img src="" alt="Profile Picture" class="profile-pic" id="profilePic">
+        <div>
+          <h2 id="profileName"></h2>
+          <p class="email" id="profileEmail"></p>
+          <button class="btn-primary" id="goSettingsBtn">تعديل البيانات من الإعدادات</button>
+        </div>
+      </div>
+    </section>
 
-    <form id="profile-form">
-      <input type="text" id="profile-name" placeholder="الاسم الكامل" required>
-      <input type="email" id="profile-email" placeholder="البريد الإلكتروني" disabled>
-      <input type="file" id="profile-picture-file" style="display:none;" accept="image/*">
-      <button type="submit" class="btn-save">حفظ التغييرات</button>
-      <button type="button" class="btn-logout" onclick="logout()">تسجيل الخروج</button>
-    </form>
-  </div>
+    <section class="profile-grid">
+      <div class="profile-card">
+        <h3>نظرة سريعة</h3>
+        <div class="profile-stats">
+          <div>
+            <span id="completedCount">0</span>
+            <small>الدورات المكتملة</small>
+          </div>
+          <div>
+            <span id="certCount">0</span>
+            <small>الشهادات</small>
+          </div>
+          <div>
+            <span id="notifCount">0</span>
+            <small>الإشعارات</small>
+          </div>
+        </div>
+      </div>
+
+      <div class="profile-card">
+        <h3>النشاط الأخير</h3>
+        <ul class="profile-activity" id="recentActivity"></ul>
+      </div>
+
+      <div class="profile-card">
+        <h3>إعدادات الحساب</h3>
+        <div class="profile-actions">
+          <a class="btn-secondary" href="/my-courses.html">دوراتي</a>
+          <a class="btn-secondary" href="/achievements.html">إنجازاتي</a>
+          <button type="button" class="btn-ghost" id="logoutBtn">تسجيل الخروج</button>
+        </div>
+        <p class="profile-note">يمكن تعديل الاسم فقط من خلال صفحة الإعدادات لضمان تحديث الشهادات.</p>
+      </div>
+    </section>
+  </main>
 
   <!-- Footer -->
   <div id="footer-placeholder"></div>
 
-  <!-- Main JS -->
   <script type="module" src="js/main.js"></script>
-
-  <script>
-    const user = JSON.parse(localStorage.getItem("coursehub_user"));
-    if(!user){
-      window.location.href='login.html';
-    } else {
-      document.getElementById('profile-name').value = user.name;
-      document.getElementById('profile-email').value = user.email;
-      document.getElementById('profilePic').src = user.picture;
-      document.getElementById('profileName').innerText = user.name;
-      document.getElementById('profileEmail').innerText = user.email;
-    }
-
-    const profilePic = document.getElementById('profilePic');
-    const profileFileInput = document.getElementById('profile-picture-file');
-
-    profilePic.addEventListener('click', () => profileFileInput.click());
-
-    profileFileInput.addEventListener('change', () => {
-      const file = profileFileInput.files[0];
-      if(file){
-        const reader = new FileReader();
-        reader.onload = e => profilePic.src = e.target.result;
-        reader.readAsDataURL(file);
-      }
-    });
-
-    document.getElementById('profile-form').addEventListener('submit', e => {
-      e.preventDefault();
-      localStorage.setItem("coursehub_user", JSON.stringify({
-        name: document.getElementById('profile-name').value,
-        email: user.email,
-        picture: profilePic.src,
-        role: user.role
-      }));
-      alert('تم حفظ البيانات بنجاح!');
-      location.reload();
-    });
-
-    function logout(){
-      localStorage.removeItem("coursehub_user");
-      window.location.href='login.html';
-    }
-  </script>
+  <script src="js/profile.js"></script>
 
 </body>
 </html>
