Refresh homepage and apply global theme toggle

--- a/index.html
+++ b/index.html
@@ -70,8 +70,23 @@
 
   <section class="hero">
     <div class="hero-content">
+      <span class="hero-badge"><i class="fa fa-award"></i> منصة تعلم احترافية</span>
       <h1>ابدأ رحلتك التعليمية الآن!</h1>
       <p>انضم إلى آلاف الطلاب وطور مهاراتك بسرعة مع دوراتنا الاحترافية.</p>
+      <div class="hero-stats">
+        <div>
+          <strong>120+</strong>
+          <span>دورة احترافية</span>
+        </div>
+        <div>
+          <strong>18K</strong>
+          <span>طالب نشط</span>
+        </div>
+        <div>
+          <strong>4.9/5</strong>
+          <span>تقييمات المتعلمين</span>
+        </div>
+      </div>
       <a href="courses.html" class="btn btn-hero">استكشف الدورات</a>
     </div>
   </section>
@@ -98,6 +113,47 @@
     <h2>الدورات الأكثر شعبية</h2>
     <div class="courses-grid">
       <!-- سيتم ملؤها ديناميكيًا -->
+    </div>
+  </section>
+
+  <section class="container">
+    <div class="test-promo">
+      <div>
+        <h2>اختبر مهاراتك بعد إنهاء الدورات</h2>
+        <p>جهّز نفسك للاختبارات العملية واحصل على تقييم فوري لمستواك.</p>
+      </div>
+      <a href="tests.html">عرض الاختبارات</a>
+    </div>
+  </section>
+
+  <section class="container">
+    <h2>خطوات التعلم في CourseHub</h2>
+    <div class="learning-steps">
+      <div class="learning-step">
+        <i class="fa fa-compass"></i>
+        <h3>اختر المسار</h3>
+        <p>استكشف الدورات والمسارات التي تناسب طموحاتك.</p>
+      </div>
+      <div class="learning-step">
+        <i class="fa fa-play-circle"></i>
+        <h3>تابع الدروس</h3>
+        <p>تعلّم عبر دروس تفاعلية ووسائط تعليمية عالية الجودة.</p>
+      </div>
+      <div class="learning-step">
+        <i class="fa fa-medal"></i>
+        <h3>احصل على الشهادة</h3>
+        <p>أكمل الاختبارات واحصل على شهادة احترافية باسمك.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="container">
+    <div class="cta-strip">
+      <div>
+        <h3>جاهز للانضمام؟</h3>
+        <p>ابدأ اليوم واستثمر وقتك في تعلم مهارة جديدة بشهادة احترافية.</p>
+      </div>
+      <a href="register.html" class="btn">ابدأ الآن</a>
     </div>
   </section>
 
